<resources>
    <string name="login">INICIAR SESIÓN</string>
    <string name="registrar">NO TENGO CUENTA, REGISTRARME</string>
    <string name="app_name">Tiendeo app</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="pick_image">Seleccionar imagen</string>
    <string name="add_product">Agregar producto</string>
    <string name="btn_update">Actualizar producto</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_description">Descripción</string>
    <string name="product_price">Precio</string>
    <string name="product_stock">Unidades disponibles</string>
    <string name="product_category">Categoria</string>
    <string name="RegistroNombre">Nombre Completo</string>
    <string name="RegistroCorreo">Correo Electrónico</string>
    <string name="RegistroPais">Pais</string>
    <string name="RegistroCuidad">Cuidad</string>
    <string name="RegistroContraseña">Constraseña</string>
    <string name="RegistroRol">Seleccione su rol</string>
    <string name="RegistroNombreTienda">Nombre de la tienda</string>
    <string name="ProductosTitulo">Productos</string>
    <string name="cantidad">Cantidad:</string>
    <string name="precio">Precio:</string>
    <string name="categoria">Categoría:</string>
    <string name="NombreProducto">Nombre del producto</string>
    <string name="preference_file_key">data_usser</string>
</resources>